--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,84 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+		<link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+		<title>URCA</title>
+		{% block stylesheets %}{% endblock %}
+	</head>
+	<body>
+
+		<nav class="navbar navbar-expand-lg w-100 m-auto navbar-dark bg-primary d-flex flex-row-reverse">
+			<a class="navbar-brand" href="">Venture Orbital Systems</a>
+			<a class="navbar-brand" href="">Add Employee</a>
+			<a class="navbar-brand" href="">Employee List</a>
+			<a class="navbar-brand d-flex flex-row-reverse" href="">Administration</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse " id="navbarColor01">
+				<ul class="navbar-nav mr-auto     ">
+					<li
+						class="nav-item ">{# <a class="nav-link" href="{{path('vos')}}">Accueil</a> #}
+					</li>
+
+
+					<!-- Option Menu New employee-->
+
+
+					<li
+						class="nav-item ">{# <a class="nav-link" href="{{path('new_employee')}}">new_employee</a> #}
+					</li>
+
+					<!-- Option Fin New employee-->
+
+
+					<!-- Option Menu employee list-->
+
+					<li
+						class="nav-item ">{# <a class="nav-link" href="{{path('employee_list')}}">employee_list</a> #}
+					</li>
+
+					<!-- Option Fin Menu employee list-->
+
+
+					<!-- Option Menu entreprise-->
+
+					<li
+						class="nav-item ">{# <a class="nav-link" href="#">employment contract generator</a> #}
+					</li>
+
+
+					<!-- Option Fin Menu entreprise-->
+
+
+					<!-- Option menu Admin-->
+
+
+				</ul>
+				<!-- Option Connexion /Deconnexion-->
+				{% if not app.user %}
+					<ul class="navbar-nav">
+						<li
+							class="nav-item ">{# <a class="nav-link bg-success rounded" href="{{path("app_login")}}">Connexion</a> #}
+						</li>
+					{% else %}
+						<li
+							class="nav-item ">{# <a class="nav-link bg-danger rounded" href="{{path("app_logout")}}">Deconnexion</a> #}
+						</li>
+					{% endif %}
+				</ul>
+
+			</div>
+		</nav>
+
+
+		<h1 class="text-center"> {% block titrePage %}{% endblock %}
+			</h1>
+			<hr>
+
+			{% block body %}{% endblock %}
+			{% block javascripts %}{% endblock %}
+		</body>
+	</html>
