--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,16 +9,21 @@
 	</head>
 	<body>
 
-		<nav class="navbar navbar-expand-lg w-100 m-auto navbar-dark bg-primary d-flex flex-row-reverse">
-			<a class="navbar-brand" href="">Venture Orbital Systems</a>
+
+		<nav class="navbar navbar-expand-lg w-100 m-auto navbar-dark bg-primary ">
+			<a class="navbar-brand p-2" href="">Venture Orbital Systems</a>
+
+
 			<a class="navbar-brand" href="">Add Employee</a>
 			<a class="navbar-brand" href="">Employee List</a>
-			<a class="navbar-brand d-flex flex-row-reverse" href="">Administration</a>
+			<a class="navbar-brand" href="">Administration</a>
+
+
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse " id="navbarColor01">
-				<ul class="navbar-nav mr-auto     ">
+				<ul class="navbar-nav mr-auto">
 					<li
 						class="nav-item ">{# <a class="nav-link" href="{{path('vos')}}">Accueil</a> #}
 					</li>
