--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,17 +4,17 @@
 		<meta charset="UTF-8">
 
 		<link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
-		<title>URCA</title>
+		<title>VOS</title>
 		{% block stylesheets %}{% endblock %}
 	</head>
 	<body>
 
 
 		<nav class="navbar navbar-expand-lg w-100 m-auto navbar-dark bg-primary ">
-			<a class="navbar-brand p-2" href="">Venture Orbital Systems</a>
+			<a class="navbar-brand p-2" href="{{path('app_home')}}">Venture Orbital Systems</a>
 
 
-			<a class="navbar-brand" href="">Add Employee</a>
+			<a class="navbar-brand" href="{{path('app_add_employee')}}">Add Employee</a>
 			<a class="navbar-brand" href="">Employee List</a>
 			<a class="navbar-brand" href="">Administration</a>
 
